--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="service-item text-center pt-3 h-100">
                     <div class="p-4">
                         <i class="fa fa-3x fa-users text-primary mb-4"></i>
-                        <h5 class="mb-3">Mapa interactivo</h5>
+                        <h5 class="mb-3">Comunidad única</h5>
                         <p>Formamos una comunidad única donde cada miembro contribuye a mejorar la seguridad vial de
                             nuestra ciudad.</p>
                     </div>
