--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <h5>Ubicación: </h5>
                             <h4 id="modalLocation" class="text-center">Ubicación del Bache</h5>
                                 <h5>Descripcion: </h5>
-                            <p id="modalDescription" class="text-center">Descripción del bache</p>
+                            <h4 id="modalDescription" class="text-center">Descripción del bache</h4>
                         </div>
                     </div>
                 </div>
